# sentinelops

./: .env  .env.example  .eslintrc.json  .gitignore  build-linux.sh  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
docs/: ENV.md  PAYMENTS.md  UPDATES.md
llm-proxy/: .gitignore  README.md  index.js  package-lock.json  package.json
release-assets/: latest.json
scripts/: create-release.ps1  generate-icons.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  extensions.rs  file_ops.rs  git.rs  llm.rs  memory.rs  mod.rs  search.rs  sqlite.rs  terminal.rs  trash.rs  window.rs
src-tauri/src/services/: config.rs  file_service.rs  memory_service.rs  mod.rs  terminal_service.rs  trash_service.rs
src/components/: AgentPanel.tsx  AppsPanel.tsx  AuthModal.tsx  BottomPanel.tsx  Breadcrumbs.tsx  CommandApproval.tsx  CommandPalette.tsx  ContextMenu.tsx  DocumentationPanel.tsx  EditorArea.tsx  ExtensionViewPanel.tsx  ExtensionWebview.tsx  ExtensionsPanel.tsx  FileBrowser.tsx  FolderPicker.tsx  GitPanel.tsx  MarkdownPreview.tsx  MemoryPanel.tsx  MenuBar.tsx  ModelSelector.tsx  Notifications.tsx  RecentFilesModal.tsx  SearchPanel.tsx  SettingsPanel.tsx  SetupWizard.tsx  Sidebar.tsx  SqlitePanel.tsx  (+3 more)
website/: .env.example  .env.production  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
(+61 files in other folders)
